@@ -36,6 +36,9 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2008-01-10 DP  1.8.2  Correctly identify the schema of trigger functions that
+                      are in system catalogs as can be the case with integrated
+                      full text search.
 2008-01-09 HS  1.8.2  Warn the user if a file cannot be saved in the default
                       encoding.
 2008-01-07 DP  1.8.2  Undecorated out-param types must be included in EDB-SPL
@@ -1081,6 +1084,7 @@ Date       Dev Ver    Change details
 2003-08-07 AP  0.9.2  help system cleanups, support of CHM help for win32.
 2003-08-07 AP  0.9.2  Added missing comment in domain property.
 2003-08-06 DP  0.9.2  Bumped version number.
+
 
 
 
